# fiveg_measure

./: .gitignore  README.md  make_demo_data.py  make_sample_data.sh  pyproject.toml  summary.csv
configs/: conf_mayora.yaml.template  example_config.yaml  my_config.yaml
documents/: Guia_Pruebas_Campo_Mayora.md  Guia_SIM_Mayora.md  Plan_Validacion_Feko.md  Procedimiento_Pruebas_Remotas.md  Process.md
fiveg_measure/: __init__.py  cli.py  config.py  remote_setup.py  runner.py
fiveg_measure/dashboard/: __init__.py  server.py
fiveg_measure/schemas/: csv_schemas.md
fiveg_measure/tests/: __init__.py  bufferbloat_test.py  http_download_test.py  http_upload_test.py  iperf_tcp_test.py  iperf_udp_test.py  mec_test.py  metadata_probe.py  mtr_test.py  ping_test.py  router_probe.py  tcp_connect_test.py  traceroute_test.py
fiveg_measure/utils/: __init__.py  csv_writer.py  logging_setup.py  net_info.py  subprocess_runner.py
results_archive/: doctor.csv
results_archive/5G_Test_01/: bufferbloat_summary.csv  iperf_tcp_intervals.csv  iperf_tcp_summary.csv  iperf_udp_summary.csv  measurements_long.csv  ping.csv  run_metadata.csv  system_metrics.csv  tcp_connect.csv
results_archive/demo/: measurements_long.csv  run_metadata.csv  system_metrics.csv
results_archive/test_remoto_wifi/: bufferbloat.csv  bufferbloat_summary.csv  iperf_tcp_intervals.csv  iperf_tcp_summary.csv  iperf_udp_summary.csv  measurements_long.csv  ping.csv  ping_summary.csv  run_metadata.csv  system_metrics.csv  tcp_connect.csv  traceroute.csv
results_archive/test_remoto_wifi_v2/: bufferbloat.csv  (+11 more)
(+284 files in other folders)
